[gd_scene load_steps=20 format=3 uid="uid://cgvppps0pkhxt"]

[ext_resource type="Script" path="res://Scenes/Enemies/Vampire_Enemy.gd" id="1_eau7t"]
[ext_resource type="PackedScene" uid="uid://0f0v4nfld8qo" path="res://Scenes/Components/health_component.tscn" id="2_co632"]
[ext_resource type="PackedScene" uid="uid://wud6ff8hcvhk" path="res://Scenes/Components/velocity_component.tscn" id="3_oefln"]
[ext_resource type="PackedScene" uid="uid://dv7br2yxnooh1" path="res://Scenes/Components/blood_drop_component.tscn" id="4_n7a64"]
[ext_resource type="PackedScene" uid="uid://fygpokdod3lj" path="res://Scenes/Items/experience_blood.tscn" id="5_h75ro"]
[ext_resource type="PackedScene" uid="uid://u1m57c2tfe30" path="res://Scenes/Components/death_component.tscn" id="6_ha6tt"]
[ext_resource type="PackedScene" uid="uid://ce801sgwsca1h" path="res://Scenes/Components/hit_flash_component.tscn" id="6_qx5bu"]
[ext_resource type="Shader" path="res://Scenes/Components/hit_flash_component.gdshader" id="7_acj3a"]
[ext_resource type="Texture2D" uid="uid://bubeaobbxvirw" path="res://Assets/Enemies/VampireSpritesheet.png" id="7_orebm"]
[ext_resource type="AudioStream" uid="uid://1v3blvavgv46" path="res://Resources/Audio/Sound Effects/VampireDamage/VampireDamage1.wav" id="9_0look"]
[ext_resource type="PackedScene" uid="uid://bbcgucbi2vr16" path="res://Scenes/Components/random_stream_player_2d_component.tscn" id="9_qpa2d"]
[ext_resource type="AudioStream" uid="uid://dgv11txfjenbs" path="res://Resources/Audio/Sound Effects/VampireDamage/VampireDamage2.wav" id="10_eloa1"]
[ext_resource type="AudioStream" uid="uid://cwsoe5kqel6po" path="res://Resources/Audio/Sound Effects/VampireDamage/VampireDamage3.wav" id="11_jvqwm"]
[ext_resource type="Material" uid="uid://cl00kxo3seb35" path="res://Assets/CanvasItemMaterials/Light.tres" id="13_v6wc6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rr661"]
resource_local_to_scene = true
shader = ExtResource("7_acj3a")
shader_parameter/lerp_percent = null

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_357t5"]
radius = 16.5
height = 44.0

[sub_resource type="Animation" id="Animation_rjufj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_38mmc"]
resource_name = "walk"
loop_mode = 1
step = 0.0417
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0417, 0.0834, 0.1251, 0.1668, 0.2085, 0.2502, 0.2919, 0.3336, 0.3753, 0.417, 0.4587, 0.5004, 0.5421, 0.5838, 0.6255, 0.6672, 0.7089, 0.7506, 0.7923, 0.834, 0.8757, 0.9174, 0.9591, 1.0008),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 23]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2502, 0.7506),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_footstep"
}, {
"args": [],
"method": &"play_footstep"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l2cm7"]
_data = {
"RESET": SubResource("Animation_rjufj"),
"walk": SubResource("Animation_38mmc")
}

[node name="VampireEnemy" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(1.75, 1.75)
collision_layer = 4
collision_mask = 3
safe_margin = 1.0
script = ExtResource("1_eau7t")

[node name="HealthComponent" parent="." instance=ExtResource("2_co632")]
max_health = 2.0
current_health = 2.0

[node name="VelocityComponent" parent="." instance=ExtResource("3_oefln")]
max_speed = 60

[node name="BloodDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_n7a64")]
blood_drop_scene = ExtResource("5_h75ro")
health_component = NodePath("../HealthComponent")
spawn_amount = 1

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("6_qx5bu")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_rr661")
light_fade_material = ExtResource("13_v6wc6")

[node name="VampireDamageRandomPlayer2DComponent" parent="." instance=ExtResource("9_qpa2d")]
streams = Array[AudioStream]([ExtResource("9_0look"), ExtResource("10_eloa1"), ExtResource("11_jvqwm")])

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("6_ha6tt")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_357t5")

[node name="Sprite2D" type="Sprite2D" parent="." groups=["enemy"]]
material = ExtResource("13_v6wc6")
rotation = -1.5708
texture = ExtResource("7_orebm")
offset = Vector2(0, -2)
hframes = 24

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_l2cm7")
}

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="HurtboxCollision" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CapsuleShape2D_357t5")

[node name="HealthLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.171
anchor_right = 0.5
anchor_bottom = 0.171
offset_right = 22.0
offset_bottom = 26.0
grow_horizontal = 2
text = "HP"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
